@@ -2,6 +2,16 @@
     recreate too small cached thumbnails #584
     read $XDG_TEMPLATES_DIR via glib for user-dirs.dirs support #581
     Devices|Settings|Auto-Mount|Mount Dirs accept XDG vars, mkdir #558
+    get mime type of only reg and link files, not char dev
+    configure.ac set G_LOG_DOMAIN
+    fix main.c debug_gdk_threads_leave
+    change detection blacklist detect new files #478 #582
+    background MIME type loading #544 #582
+    new background deep dir size loading #338 #582
+    automatic mount point refresh on u/mount #582
+    refresh now refreshes all tabs open to dir #582
+    new run-task socket task type refresh to refresh tabs or dirs #582
+    current device name and more total size info in status bar #582
 1.0.4   2015-10-17:
     new spacefm-installer replaces self-extrct and install #571
     README rewritten and manual updated for new installer #571
